@@ -545,7 +545,7 @@
 		      <property name="text_spacing">2</property>
 		      <property name="text_editable">False</property>
 		      <property name="text_static">False</property>
-		      <signal name="select_icon" handler="on_select_icon" last_modification_time="Fri, 19 Mar 2004 23:21:30 GMT"/>
+		      <signal name="button_press_event" handler="on_books_mouse_event" last_modification_time="Wed, 31 Mar 2004 22:04:02 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -591,6 +591,7 @@
 		      <property name="rules_hint">False</property>
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">True</property>
+		      <signal name="button_press_event" handler="on_books_mouse_event" last_modification_time="Wed, 31 Mar 2004 22:04:37 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -665,6 +666,30 @@
   </child>
 
   <child>
+    <widget class="GtkMenuItem" id="select_all3">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Select _All</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_select_all" last_modification_time="Wed, 31 Mar 2004 21:58:44 GMT"/>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="deselect_all3">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Dese_lect All</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_deselect_all" last_modification_time="Wed, 31 Mar 2004 21:58:44 GMT"/>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="separator17">
+      <property name="visible">True</property>
+    </widget>
+  </child>
+
+  <child>
     <widget class="GtkImageMenuItem" id="delete1">
       <property name="visible">True</property>
       <property name="label" translatable="yes">_Delete</property>
@@ -672,7 +697,7 @@
       <signal name="activate" handler="on_delete" last_modification_time="Mon, 29 Mar 2004 23:27:15 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image246">
+	<widget class="GtkImage" id="image288">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-delete</property>
 	  <property name="icon_size">1</property>
@@ -682,6 +707,54 @@
 	  <property name="ypad">0</property>
 	</widget>
       </child>
+    </widget>
+  </child>
+</widget>
+
+<widget class="GtkMenu" id="nobook_popup">
+
+  <child>
+    <widget class="GtkImageMenuItem" id="add1">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">_Add a Book</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_new_book" last_modification_time="Wed, 31 Mar 2004 00:53:44 GMT"/>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image289">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-add</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="separator16">
+      <property name="visible">True</property>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="select_all2">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Select _All</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_select_all" last_modification_time="Wed, 31 Mar 2004 00:53:44 GMT"/>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="deselect_all2">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">Dese_lect All</property>
+      <property name="use_underline">True</property>
+      <signal name="activate" handler="on_deselect_all" last_modification_time="Wed, 31 Mar 2004 00:54:00 GMT"/>
     </widget>
   </child>
 </widget>
